# navie_

./: .env.example  README.md  _tmp_github_signup.py  _tmp_github_signup_v2.py  augment_signup.py  config.py  docker-compose.yml  email_config.json  email_manager_cli.py  email_receiver.py  github_signup.py  github_signup_v2.py  new  pyproject.toml  requirements.txt  setup.py  test_wmemail.py  tfa.md
.cunzhi-memory/: metadata.json  rules.md
config/: __init__.py  augment_task_flows.toml  config.py
core/: state_manager.py  task_manager.py
data/: add_github_registered_field.sql  complete_database_schema.sql  email_accounts_schema.sql  insert_sample_data.sql  upgrade_email_config_shanmail_only.sql
logs/: .gitkeep
requirements/: base.txt  dev.txt
scripts/: github_login.py  start_web.py
src/navie/: __init__.py
src/navie/core/: event_bus.py  task_manager.py
src/navie/services/: __init__.py
src/navie/tasks/: browser_tasks.py  captcha_tasks.py  email_tasks.py  form_tasks.py  form_tasks.py.backup  initial_tasks.py  task_registry.py
src/navie/utils/: browser.py  captcha_solver.py  email_manager.py  logger.py  roxy_client.py  shan_mail_provider.py
src/navie/web/: __init__.py  email_web_manager.py  email_web_manager.py.backup
tasks/: augment_tasks.py  browser_tasks.py  captcha_tasks.py  email_tasks.py  form_tasks.py  initial_tasks.py  task_registry.py
test/: test_yescaptcha_api.py
utils/: browser.py  captcha.py  email_manager.py  logger.py  proxy_manager.py  shan_mail_provider.py  two_factor_auth.py  username_generator.py  wmemail_provider.py
